@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,17 +22,10 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package com.oracle.svm.hosted.server;
+package hello.privateLib;
 
-import java.util.concurrent.ForkJoinPool;
-import java.util.concurrent.ForkJoinWorkerThread;
-
-public class NativeImageThreadFactory implements ForkJoinPool.ForkJoinWorkerThreadFactory {
-    @Override
-    public ForkJoinWorkerThread newThread(ForkJoinPool pool) {
-        ForkJoinWorkerThread thread = new ForkJoinWorkerThread(pool) {
-        };
-        thread.setContextClassLoader(NativeImageBuildServer.class.getClassLoader());
-        return thread;
+public class Greeter {
+    public static void greet() {
+        System.out.println("Seeing this requires --add-exports");
     }
 }
